Update FP for WAT.html

--- a/FP for WAT.html
+++ b/FP for WAT.html
@@ -983,7 +983,7 @@ function calc(){
             </tbody>
         </table>
         <div class="row">
-            <button type="button" onClick="calc">Calculate</button>
+            <button type="button" onclick="calc()">Calculate</button>
         </div>
         <div class="container">
             <div class="row">
